# minijson

./: .gitignore  CMakeLists.txt  CodeCoverage.cmake  Json.cpp  Json.h  README.md  json_test.cpp  main.cpp  run_test.sh
lib/: Json.cpp  Json.h
test/: CMakeLists.txt  JsonTest.cpp  MiniJsonTest.cpp  StructSample.h
